fixed the page alignment and added a carre section

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,42 +4,45 @@ body {
     padding: 0;
 }
 
-/* header  */
-
+/* Header */
 .header {
-    background-color: #120869;
+    background-color: #9d98c4;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
 }
+
 .header .logo {
     font-size: 24px;
     font-weight: bold;
 }
+
 .header nav {
     display: flex;
     gap: 20px;
 }
+
 .header nav a {
     color: white;
     text-decoration: none;
     font-size: 18px;
 }
+
 .header nav a:hover {
     text-decoration: underline;
 }
 
 .container {
     padding: 20px;
-    background-color: #120869;
+    background-color: #3d3c44;
 }
 
 .top-box {
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #d9d9d9;
+    /* background-color: #d9d9d9; */
 }
 
 .flex-container {
@@ -48,22 +51,23 @@ body {
 }
 
 .box {
-    flex: 1;
     padding: 20px;
 }
 
 .left-box {
-    background-color: #f9f9f9;
+    flex: 1;
+    /* background-color: #f9f9f9; */
     margin-right: 5px;
 }
 
 .right-box {
-    background-color: #e9e9e9;
+    flex: 2;
+    /* background-color: #bb7f7f; */
     margin-left: 5px;
 }
 
 .about-me {
-    color: red;
+    /* color: rgb(253, 233, 233); */
     text-decoration: double;
 }
 
@@ -71,4 +75,24 @@ body {
     max-width: 100%;
     height: auto;
     display: block;
+    border-radius: 10px;
 }
+
+.career-nav {
+    display: flex;
+    justify-content: flex-start;
+    gap: 100px;
+}
+
+.career-nav a {
+    text-decoration: none;
+    color: #000;
+    padding: 5px 10px;
+    border-radius: 4px;
+    
+}
+
+.career-nav a:hover {
+    background-color: #f0f0f0;
+}
+
